--- a/Makefile.in
+++ b/Makefile.in
@@ -196,8 +196,8 @@ ETAGS = etags
 CTAGS = ctags
 CSCOPE = cscope
 AM_RECURSIVE_TARGETS = cscope
-am__DIST_COMMON = $(srcdir)/Makefile.in COPYING INSTALL compile \
-	depcomp install-sh missing
+am__DIST_COMMON = $(srcdir)/Makefile.in compile depcomp install-sh \
+	missing
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
 distdir = $(PACKAGE)-$(VERSION)
 top_distdir = $(distdir)
@@ -779,6 +779,11 @@ uninstall-am: uninstall-libLIBRARIES
 
 .PRECIOUS: Makefile
 
+
+test:
+	gcc -lCURL -lm src/vendor/cJSON.c src/utils.c  src/libidroplink.c  tests/minunit.h tests/libidroplink_tests.c && ./a.out && rm a.out
+
+.PHONY: test
 
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
