this *should* fix build errors related to cross platform stuff

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,7 +1,13 @@
 lib_LIBRARIES = libidroplink.a
 libidroplink_a_SOURCES = src/libidroplink.c src/utils.c src/vendor/cJSON.c
 
+if DARWIN
+libs:="libcurl"
+else
+libs:="libcurl librt"
+endif
+
 test:
-	gcc $(pkg-config --libs --cflags libcurl) -lm src/vendor/cJSON.c src/utils.c src/libidroplink.c tests/minunit.h tests/libidroplink_tests.c && ./a.out && rm a.out
+	gcc `pkg-config --libs --cflags $(libs)` -lm $(libidroplink_a_SOURCES) tests/minunit.h tests/libidroplink_tests.c && ./a.out && rm a.out
 
 .PHONY: test
