--- a/configure.ac
+++ b/configure.ac
@@ -1,6 +1,15 @@
 AC_INIT([libidroplink], [0.1], [chris@andinfinity.de])
 AM_INIT_AUTOMAKE([foreign subdir-objects])
 
+case $(uname -s) in
+    Darwin)
+        AM_CONDITIONAL([DARWIN], true)
+        ;;
+    *)
+        AM_CONDITIONAL([DARWIN], false)
+        ;;
+esac
+
 m4_include([libcurl.m4])
 
 AC_CHECK_HEADERS([stdlib.h strings.h])
