cleaned up makefile; found out that ubuntu uses --as-needed, thus the libraries need to be at the and; librt should be included in more recent versions of the stdlib

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,5 +1,6 @@
 lib_LIBRARIES = libidroplink.a
 libidroplink_a_SOURCES = src/libidroplink.c src/utils.c src/vendor/cJSON.c
+libidroplink_test_SOURCES = tests/minunit.h tests/libidroplink_tests.c
 
 if DARWIN
 libs:="libcurl"
@@ -8,6 +9,7 @@ libs:="libcurl librt"
 endif
 
 test:
-	gcc `pkg-config --libs --cflags libcurl` -lm -lrt $(libidroplink_a_SOURCES) tests/minunit.h tests/libidroplink_tests.c && ./a.out && rm a.out
+	gcc $(libidroplink_a_SOURCES) $(libidroplink_test_SOURCES) \
+		`pkg-config --libs --cflags libcurl` -lm && ./a.out && rm a.out
 
 .PHONY: test
